<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tictac</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_score">Score</string>
    <string name="title_activity_game_credits">GameCredits</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="button_info">Game Credits</string>
    <string name="textviewl_groupinfo">Game developed by group AJ</string>
    <string name="textview_mem">Members:</string>
    <string name="textview_san">Satyanarayana Jagata</string>
    <string name="textview_sum">"Sumanth Krishna "</string>
    <string name="button_backtogame">Back to Game</string>
    <string name="button_scores">Scores</string>
    <string name="button_reset">Reset</string>
    <string name="button_Credits">Credits</string>
    <string name="button_quit">Quit</string>
    <string name="button_scoreboard">Score Board</string>
    <string name="textview_noofgames">Number Of Games Played:</string>
    <string name="textview_playerwins">Player winning stats:</string>
    <string name="textview_p1">Player 1:</string>
    <string name="textview_p2">Player 2:</string>
    <string name="button_backfromscore">Back to Game</string>

</resources>
