<!-- Group - AJ
activity_main.xml - Tictac
Members:
	1.Satyanarayana Jagata - 800844992
	2.Sumanth Krishna - 800810828
 -->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/playerinformation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#8FD8D8"
        android:clickable="false"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/imageone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/imagetwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/imagethree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imagefour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/imagefive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/imagesix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageseven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/imageeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/imagenine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty" />
    </LinearLayout>

    <!-- <TextView
        android:id="@+id/winner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="winner"
        android:textSize="20dp"
         /> -->

    <TextView
        android:id="@+id/win"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="18dp"
        android:text=""
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_scores" />

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_reset" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_Credits" />

        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_quit" />
    </LinearLayout>

</LinearLayout>